# uc-bana-7025

./: .Rprofile  .gitignore  98-compute-environment.Rmd  CLAUDE.md  Makefile  README.md  _bookdown.yml  _main.html  _main.rds  _output.yml  _quarto.yml  index.Rmd  index.html  index.qmd  pyproject.toml  references.bib  render-slides.sh  requirements.txt  search.json  spec.md  style.css
_book/: 01-module-1.md  course-readings.html  index.html  index.md  lesson-1.html  lesson-2-1.html  module-1-lab.html  overview-1.html  search_index.json  tasks.html
book/: 01-intro-data-mining.html  02-preparing-for-code.html  02-preparing-for-code.qmd  03-python-basics.html  03-python-basics.qmd  04-jupyter.html  04-jupyter.qmd  05-data-structures.html  05-data-structures.qmd  06-libraries.html  06-libraries.qmd  07-importing-data.html  07-importing-data.qmd  08-dataframes.html  08-dataframes.qmd  09-subsetting.html  09-subsetting.qmd  10-manipulating-data.html  10-manipulating-data.qmd  11_aggregating_data.html  11_aggregating_data.qmd  12-joining-data.html  12-joining-data.qmd  13-data-viz-pandas.html  13-data-viz-pandas.qmd  14-data-viz-matplotlib.html  14-data-viz-matplotlib.qmd  15-data-viz-bokeh.html  15-data-viz-bokeh.qmd  16-control-statements.html  16-control-statements.qmd  17-iteration-statements.html  17-iteration-statements.qmd  18-functions.html  18-functions.qmd  19-data-exploration.html  19-data-exploration.qmd  20-first-model.html  20-first-model.qmd  21-feature-engineering.html  (+29 more)
data/: untidy1.csv  untidy2.csv  untidy3.csv  untidy4.csv  x.rds  xy.RData
docs/: 404.html  (+67 more)
(+161 files in other folders)
