[project]
name = "uc-bana-7025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bokeh>=3.9.1",
    "completejourney-py>=0.1.0",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.8",
    "matplotlib>=3.11.0",
    "nbconvert>=7.17.1",
    "nbformat>=5.10.4",
    "numpy>=2.4.6",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.51",
    "watermark>=2.6.0",
]
